need to add form tag and room details

--- a/hotel-template.html
+++ b/hotel-template.html
@@ -41,5 +41,10 @@
         </div>
     </section>
     <!-- form and image tag section ends here -->
+    <section id="rooms">
+        <h3>Rooms</h3>
+        <p>Make yourself at home is our slogan. We offer the best beds in the industry. Sleep well and rest well.   
+        </p>
+    </section>
 </body>
 </html>
